# c-testing-and-mocking

./: CMakeLists.txt  README.md  framework.c  framework.h  mock.h
test/: main.c
